  In systems that don't support linker namespaces, these always return
  the integers 1 and 0 respectively.

* Add record full support for rv64gc architectures

* New commands

maintenance check psymtabs
  Renamed from maintenance check-psymtabs

maintenance check symtabs
  Renamed from maintenance check-symtabs

maintenance canonicalize
  Show the canonical form of a C++ name.

set riscv numeric-register-names on|off
show riscv numeric-register-names
  Controls whether GDB refers to risc-v registers by their numeric names
  (e.g 'x1') or their abi names (e.g. 'ra').
  Defaults to 'off', matching the old behaviour (abi names).

set style emoji on|off|auto
show style emoji
  Controls whether GDB can display emoji.  The default is "auto",
  which means emoji will be displayed in some situations when
  the host charset is UTF-8.

set style warning-prefix STRING
set style error-prefix STRING
  These commands control the prefix that is printed before warnings
  and errors, respectively.  This functionality is intended for use
  with emoji display, and so the prefixes are only displayed if emoji
  styling is enabled.

info linker-namespaces
info linker-namespaces [[N]]
  Print information about the given linker namespace (identified as N),
  or about all the namespaces if no argument is given.

* Changed commands

info sharedlibrary
  On Linux and FreeBSD, the addresses shown in the output of this
  command are now for the full memory range allocated to the shared
  library.

info threads [-gid] [-stopped] [-running] [ID]...
  If no threads match the given ID(s) or filter options, GDB now prints

    No threads matched.

  without printing the provided arguments.  The newly added '-stopped'
  option makes GDB list the stopped threads only.  Similarly,
  '-running' makes GDB list the running threads only.  If both options
  are given together, both stopped and running threads are listed.
  These new flags can be useful to get a reduced list when there is a