@@ -59,6 +59,10 @@ maintenance check symtabs
 maintenance canonicalize
   Show the canonical form of a C++ name.
 
+maintenance set console-translation-mode <binary|text>
+maintenance show console-translation-mode
+  Controls the translation mode of stdout/stderr.  MingW only.
+
 set riscv numeric-register-names on|off
 show riscv numeric-register-names
   Controls whether GDB refers to risc-v registers by their numeric names
